# split-smart

./: .gitignore  features.md  pyproject.toml  requirements.txt  schemas.md
app/: main.py
app/core/: configs.py  database.py  lifespan.py  logging.py  redis.py
app/exceptions/: problems.py
app/src/auth/: dependencies.py  exceptions.py  models.py  router.py  services.py
app/src/expenses/: dependencies.py  exceptions.py  models.py  router.py  services.py
app/src/groups/: dependencies.py  models.py  router.py  services.py
app/src/payments/: dependencies.py  models.py  router.py  services.py
app/utils/exceptions/: base.py  register.py
