[project]
name = "split-smart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[all]>=0.136.3",
    "passlib>=1.7.4",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
]
